--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container">
-        <input id="empty" class="input-task" placeholder="O que tenho que fazer">
+        <input class="input-task" placeholder="O que tenho que fazer">
         <button class="button-add-task">Adicionar</button>
 
         <ul class="list-tasks">
